<resources>
    <string name="app_name">春晖</string>
    <string name="login">登录</string>
    <string name="login_input_username_hint">手机号</string>
    <string name="hint_password">密码</string>
    <string name="login_hold_hint">记住密码</string>
    <string name="login_forget_hint">忘记密码？</string>
    <string name="login_register_hint">注册</string>
    <string name="login_other_hint">其他方式登录</string>
    <string name="register_input_username_hint">手机号</string>
    <string name="register_username_hint">姓名</string>
    <string name="register_sms_auth_code">短信验证码</string>
    <string name="register_sms_hint">获取验证码</string>
    <string name="register_sms_wait_hint">别激动,休息一下呗&#8230;</string>
    <string name="release">发布我的活动</string>
    <string name="loading_image">正在准备图片...</string>
    <string name="register_done_hint">完成</string>
    <string name="register_man_hint">男士</string>
    <string name="register_female_hint">女士</string>
    <string name="retrieve_pwd_step_hint">下一步</string>
    <string name="retrieve_pwd_email_label_one">邮箱用户找回密码，请</string>
    <string name="retrieve_pwd_email_label"><a>点击这里</a></string>
    <string name="reset_pwd_hint">请输入至少六位新密码</string>
    <string name="register_pwd_hint">请输入至少六位数密码</string>
    <string name="register_identity_hint">请输入您的身份证号</string>
    <string name="reset_pwd_submit">确认</string>
    <string name="message_pwd_error">密码错误</string>
    <string name="message_username_null">用户名未填写！！！</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="app_loading_tv_text">正在加载……</string>
    <string name="action_settings">设置</string>
    <string name="quit_tip">再按一次退出</string>
    <string name="network_not_access">未找到可用连接</string>
    <string name="network_time_out">网络不给力，点击刷新</string>
    <string name="please_wait">请稍后……</string>
    <string name="syncing">同步中</string>
    <string name="sync_success">同步成功</string>
    <string name="sync_failed">同步失败：</string>
    <string name="sync_no_data">没有数据需要同步</string>
    <string name="action_open_by_browser">在浏览器中打开</string>
    <string name="action_copy_link">复制链接</string>
    <string name="has_copied_tip">已复制到剪贴板</string>
    <string name="action_send">分享</string>
    <string name="action_collect">收藏</string>
    <string name="action_sync">同步</string>
    <string name="collect_success">收藏成功</string>
    <string name="collect_failed">收藏失败</string>
    <string name="un_collect_success">取消收藏成功</string>
    <string name="un_collect_failed">取消收藏失败</string>
    <string name="collect_empty_list">赶快添加收藏吧</string>
    <string name="settings_offline_download">离线下载</string>
    <string name="settings_clear_cache">清除缓存</string>
    <string name="quit">退出程序</string>
    <string name="settings_resetpwd">重新设置密码</string>
    <string name="settings_cache_size">%s MB</string>
    <string name="settings_clear_cache_success">清除成功</string>
    <string name="image_terminal_img_failed">啊噢……加载图片失败</string>
    <string name="chooser_dialog_title">提示</string>
    <string name="confirm_dialog_title">确认%s吗？</string>
    <string name="loading_dialog_title">请稍后……</string>
    <string name="personal_info">个人信息</string>
    <string name="user_avatar">头像</string>
    <string name="user_username">用户名</string>
    <string name="user_nickname">昵称</string>
    <string name="user_password">密码</string>
    <string name="user_email">邮箱</string>
    <string name="user_sex">性别</string>
    <string name="user_signature">个性签名</string>
    <string name="user_unity">我的社区</string>
    <string name="user_signature_default">这个家伙很懒，什么也没留下</string>
    <string name="user_my_collection">我的收藏</string>
    <string name="user_logout">退出当前账号</string>
    <string name="user_signature_exceed_140_words">字数超过140个</string>
    <string name="personal_camera">照相</string>
    <string name="personal_album">相册</string>
    <string name="personal_login_first">您还未登录哦</string>
    <string name="personal_update_success">更新成功</string>
    <string name="personal_update_failed">更新失败：</string>
    <string name="personal_upload_avatar_success">上传头像成功</string>
    <string name="personal_upload_avatar_failed">上传头像失败：</string>
    <string name="login_login">登录</string>
    <string name="login_register">注册</string>
    <string name="login_register_now">注册账号</string>
    <string name="login_forget_password">忘记密码</string>
    <string name="login_empty_username">请填写用户名</string>
    <string name="login_empty_password">请填写密码</string>
    <string name="login_register_empty_email">请填写邮箱</string>
    <string name="login_success">登录成功</string>
    <string name="login_failed">登录失败：</string>
    <string name="login_register_success">注册成功</string>
    <string name="login_register_failed">注册失败：</string>
    <string-array name="chooser_dialog_items_collect">
        <item>转发</item>
        <item>复制链接</item>
        <item>删除</item>
    </string-array>
    <string-array name="chooser_dialog_items_list">
        <item>收藏</item>
        <item>转发</item>
        <item>复制链接</item>
    </string-array>
    <string name="shared_elements_avatar_iv">avatar_iv</string>
    <string name="MainActivity_title_news">新闻</string>
    <string name="MainActivity_title_photo">美图</string>
    <string name="MainActivity_title_video">视频</string>
    <string name="MainActivity_title_about">关于</string>
    <string name="PhotoActivity_action_wallpaper">设为壁纸</string>
    <string name="VideoFragment_label_developing">正在开发中</string>
    <string name="AboutFragment_label_grade">评分</string>
    <string name="AboutFragment_label_contact_me">联系我们</string>
    <string name="ToOders">查看我的预约</string>
    <string name="AboutFragment_label_help">帮助</string>
    <string name="AboutFragment_label_setting">设置</string>
    <string name="AboutFragment_label_check_update">检查更新</string>
    <string name="PhotoActivity_toast_success">设置壁纸成功</string>
    <string name="PhotoActivity_dialog_msg">保存图片</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_oders">Oders</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_details">Details</string>
</resources>