<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        android:divider="?android:dividerHorizontal"
        android:orientation="vertical"
        android:padding="16dp"
        android:showDividers="middle">

        <TextView
            android:id="@+id/personal_username_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="我"
            android:textColor="@color/tv_primary_color"
            android:textSize="26sp" />
        <!--头像-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="72dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/personal_user_avatar_iv"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/nav_icon" />


            <Button
                android:id="@+id/personal_user_avatar_btn"
                style="?android:borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:gravity="start|center_vertical"
                android:text="@string/user_avatar"
                android:textColor="@color/tv_primary_color"
                android:textSize="18sp" />
        </RelativeLayout>
        <!--名字-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/personal_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:ellipsize="end"
                android:maxEms="10"
                android:singleLine="true"
                android:text="-"
                android:textColor="@color/tv_primary_color"
                android:textSize="16sp" />

            <Button
                android:id="@+id/personal_name_btn"
                style="?android:borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="start|center_vertical"
                android:text="@string/register_username_hint"
                android:textColor="@color/tv_primary_color"
                android:textSize="18sp" />
        </RelativeLayout>
        <!--手机-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/personal_user_nickname_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:ellipsize="end"
                android:maxEms="10"
                android:singleLine="true"
                android:text="-"
                android:textColor="@color/tv_primary_color"
                android:textSize="16sp" />

            <Button
                android:id="@+id/personal_user_nickname_btn"
                style="?android:borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="start|center_vertical"
                android:text="@string/login_input_username_hint"
                android:textColor="@color/tv_primary_color"
                android:textSize="18sp" />
        </RelativeLayout>
        <!--性别-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/personal_user_sex_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="-"
                android:textColor="@color/tv_primary_color"
                android:textSize="16sp" />

            <Button
                android:id="@+id/personal_user_sex_btn"
                style="?android:borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="start|center_vertical"
                android:text="@string/user_sex"
                android:textColor="@color/tv_primary_color"
                android:textSize="18sp" />
        </RelativeLayout>
        <!--个性签名-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/personal_user_signature_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:maxEms="12"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:text="@string/user_signature_default"
                android:textColor="@color/tv_primary_color"
                android:textSize="16sp" />

            <Button
                android:id="@+id/personal_user_signature_btn"
                style="?android:borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/personal_user_signature_tv"
                android:layout_alignTop="@id/personal_user_signature_tv"
                android:layout_centerVertical="true"
                android:gravity="start|center_vertical"
                android:text="@string/user_unity"
                android:textColor="@color/tv_primary_color"
                android:textSize="18sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/personal_user_logout_btn"
            style="?android:borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/ic_logout"
            android:drawablePadding="8dp"
            android:gravity="start|center_vertical"
            android:text="@string/user_logout"
            android:textColor="@color/tv_primary_color"
            android:textSize="18sp" />
        <!--TODO::这个按钮的图标应该用 ic_password ,需要黑色版本的图标-->
        <Button
            android:id="@+id/person_resetpwd"
            style="?android:borderlessButtonStyle"
            android:layout_width="351dp"
            android:layout_height="46dp"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/ic_download"

            android:drawablePadding="8dp"
            android:gravity="start|center_vertical"
            android:text="@string/settings_resetpwd"
            android:textColor="@color/tv_primary_color"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>
