<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/myself"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_card">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/im"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_margin="16dp"
                    android:src="@drawable/nav_icon" />

                <TextView
                    android:id="@+id/tv_nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_introduction"
                    android:layout_toEndOf="@+id/im"
                    android:text="name"
                    android:textColor="@color/gray_dark"
                    android:textSize="@dimen/font_size_normal_high"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/tv_introduction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/im"
                    android:text="introduction"
                    android:textSize="@dimen/font_size_small" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/to_oders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/bottom_line">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/ToOders"
                    android:textSize="@dimen/font_size_normal_high"
                    android:textColor="@color/gray_dark"
                    android:layout_gravity="center_vertical"/>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@mipmap/ic_arrow_right"
                    android:layout_gravity="center_vertical"
                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_card"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:orientation="vertical"
                android:layout_marginTop="32dp">

                <LinearLayout
                    android:id="@+id/contact_me"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bottom_line">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/AboutFragment_label_contact_me"
                        android:textSize="@dimen/font_size_normal_high"
                        android:textColor="@color/gray_dark"
                        android:layout_gravity="center_vertical"/>

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@mipmap/ic_arrow_right"
                        android:layout_gravity="center_vertical"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/help"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bottom_line">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/AboutFragment_label_help"
                        android:textSize="@dimen/font_size_normal_high"
                        android:textColor="@color/gray_dark"
                        android:layout_gravity="center_vertical"/>

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@mipmap/ic_arrow_right"
                        android:layout_gravity="center_vertical"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bottom_line">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/AboutFragment_label_setting"
                        android:textSize="@dimen/font_size_normal_high"
                        android:textColor="@color/gray_dark"
                        android:layout_gravity="center_vertical"/>

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@mipmap/ic_arrow_right"
                        android:layout_gravity="center_vertical"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/check_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bottom_line">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/AboutFragment_label_check_update"
                        android:textSize="@dimen/font_size_normal_high"
                        android:textColor="@color/gray_dark"
                        android:layout_gravity="center_vertical"/>

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@mipmap/ic_arrow_right"
                        android:layout_gravity="center_vertical"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/clear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bottom_line">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginBottom="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_weight="10"
                        android:text="@string/settings_clear_cache"
                        android:textColor="@color/gray_dark"
                        android:textSize="@dimen/font_size_normal_high" />

                    <TextView
                        android:id="@+id/settings_cache_size_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginBottom="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_weight="10"
                        android:text="@string/settings_clear_cache"
                        android:textAlignment="textEnd"
                        android:textColor="@color/gray_dark"
                        android:textSize="@dimen/font_size_normal_high"
                        tools:ignore="RtlCompat" />

                    <Button
                        android:id="@+id/settings_clear_cache_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="?android:attr/selectableItemBackground"
                        android:drawablePadding="8dp"
                        android:gravity="start|center_vertical"
                        android:text="清除"
                        android:textAlignment="center"
                        android:textColor="@color/tv_primary_color"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="43dp" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/quit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:textColor="@color/tv_primary_color"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/quit_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:attr/selectableItemBackground"
                        android:drawableLeft="@drawable/ic_edit_text_delete"
                        android:drawablePadding="8dp"
                        android:gravity="start|center_vertical"
                        android:text="@string/quit"
                        android:textColor="@color/tv_primary_color"
                        android:textSize="20sp" />

                </RelativeLayout>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>






</LinearLayout>
